--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@clerk/nextjs": "^5.4.1",
     "@clerk/themes": "^2.1.27",
     "@lexical/react": "^0.16.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sentry/nextjs": "^8.29.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jsm-editor": "^0.0.12",
