--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@lexical/react": "^0.16.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@sentry/nextjs": "^8.29.0",
